css/style.css
*{
  box-sizing: border-box;
  margin: 0, auto;
  padding: 0, auto;
}

body{
    background-image: url('../images/newsAlert.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
    height: 100vh;
    overflow: hidden;
}
.headerBox{
    text-align: center;
    padding: 25px;
}

.headerStyle{
    font-family: courier;
    font-size: 6rem;
    color: beige;
}

#storyButton{
    margin-right: 20px;
}

